# zofu

./: .gitignore  CMakeLists.txt  README.md  doc.md  doc.md.in  meson.build  meson_options.txt
.github/workflows/: unittests.yml  unittests_cmake.yml
cmake/: DefineFortranOptions.cmake  FindFORD.cmake  ZofuAcceptanceHelper.cmake  ZofuHelper.cmake
contrib/cmake/: README.md  ZOFUhelper.cmake
contrib/cmake/demo/: CMakeLists_zofu_framents.txt  test_real_asserts.F90
src/: str_utils.F90  zofu.F90  zofu_driver.F90  zofu_kinds.F90  zofu_mpi.F90  zofu_scan.F90  zofu_str_utils.F90
test/: check.F90  check_mpi.F90  test_asserts.F90  test_complex_asserts.F90  test_double_asserts.F90  test_integer_asserts.F90  test_logical_asserts.F90  test_mpi.F90  test_real_asserts.F90  test_str_utils.F90  test_string_asserts.F90  test_zofu_scan.F90
test/data/: adder_setup_test.F90  adder_tests.F90
